Prise en compte des fichiers txt dans figures/datas/

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ figures/runs/
 
 # Ignorer les fichiers de données générés par les tests (CSV, TXT, etc.)
 *.csv
-!figures/raw_data/*.csv
+!figures/datas/*.csv
+!figures/datas/*.txt
 *.txt
 !figures/fichier_initialisation/*.txt
 
